--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -7,6 +7,7 @@
   background: #f4f7f8;
   border-radius: 8px;
   font-family: 'Poppins', sans-serif;
+  position: relative;
 
   fieldset {
     border: none;
@@ -60,18 +61,23 @@
     margin-bottom: 15px;
   }
 
+  .btn-group {
+    display: flex;
+  }
+
   .add-btn {
     position: relative;
     display: block;
     padding: 19px 39px 18px 39px;
     color: #fff;
-    margin: 0 auto;
     background: #1abc9c;
+    border: 0;
+    border-radius: 10px;
     font-size: 18px;
     text-align: center;
     font-style: normal;
     width: 30%;
-    margin-bottom: 10px;
+    margin-left: auto;
 
     &:hover {
       background: #18b192;
@@ -79,9 +85,16 @@
   }
 
   .next-btn {
+    margin-left: auto;
+  }
+
+  .next-btn,
+  .prev-btn {
     border: 0;
     background: transparent;
     font-size: 21px;
+    background: transparent;
+    display: block;
 
     i {
       width: 0;
@@ -102,7 +115,7 @@
     }
 
     .icon-arrow-right {
-      transform: rotate(-45deg);
+      transform: rotate(227deg);
     }
 
     &:hover {
@@ -117,10 +130,6 @@
       outline: none;
       border: 0;
     }
-  }
-
-  .btn {
-    background: transparent;
   }
 }
 
